--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
             <g id="Parcel">
             <rect id="Box" x="418.5" y="1428.5" width="456" height="394" fill="#DFB597" stroke="black" stroke-width="3"/>
             <text id="Calc" x="535" y="1600" font-family="Montserrat" font-size="35" fill="black">Calculating...</text>
-            <text id="avCubicWeight" x="630" y="1600" font-family="Montserrat" font-size="35" fill="black">0Kg</text>
+            <text id="avCubicWeight" x="590" y="1600" font-family="Montserrat" font-size="35" fill="black">0Kg</text>
             <line id="LidLeft" x1="230.14" y1="1560.69" x2="418.545" y2="1428.77" stroke="black" stroke-width="3"/>
             <line id="LidRight" x1="874.86" y1="1428.77" x2="1063.27" y2="1560.69" stroke="black" stroke-width="3"/>
             <g id="recycling">
@@ -82,11 +82,8 @@
             <line id="Ground" x1="12" y1="1826" x2="1282" y2="1826" stroke="url(#paint0_linear)" stroke-width="4"/>
         </svg>             
     </div>
-    <button>Test</button>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script> -->
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
-    <!-- <script src="scripts/calc.js"></script> -->
+    <script src="scripts/calc.js"></script>
     <script src="scripts/ui.js"></script>
 </body>
 </html>
